# mupen64plus-input-gca

./: Cargo.toml  README.md  build.rs  mupen64plus-input-gca.toml
.github/workflows/: release.yml
src/: adapter.rs  config.rs  debug.rs  debug_print.rs  ffi.rs  gca.rs  lib.rs  static_cstr.rs
src/ffi/: bindings.rs
tests/: input.rs
