[package]
name = "mupen64plus-input-gca"
version = "0.2.2"
authors = ["Amandus Søve Thorsrud <ama.thorsrud@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
bindgen = { version = "0.58.1", default-features = false, features = ["runtime"] }

[dependencies]
libloading = "0.7.0"
rusb = "0.8.0"
parking_lot = { version = "0.11.1", features = ["nightly"] }
