[package]
name = "mupen64plus-input-gca"
version = "0.3.0"
authors = ["Amandus Søve Thorsrud <ama.thorsrud@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
m64p_compat = []

[dependencies]
libloading = "0.7.0"
rusb = "0.8.0"
parking_lot = { version = "0.11.1", features = ["nightly"] }
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
